--- a/config.yml
+++ b/config.yml
@@ -20,7 +20,7 @@ database:
   password: wip
 
   # JDBC URL with newly created database
-  url: jdbc:postgresql://localhost:5432/sep8
+  url: jdbc:postgresql://localhost:5432/sep16
   
 # Tool admin account username (can be changed after login)
 adminUserName: admin
@@ -29,7 +29,7 @@ adminUserName: admin
 adminPassword: admin
   
 #url of redmine server
-redmineUrl: http://localhost/redmine/
+redmineUrl: http://10.0.1.124/redmine/
   
 #api access key of redmine administrator
-apiAccessKey: b9d329ab19430f66e7861fe734e9b334f384dc45
+apiAccessKey: 7ecde4643c4a1196f66717686daa30cbd10d34a7
