updated info alert and added manageProject option
Added a new alert that informs the user to synchronize with Redmine when the projects, sprints and people tables are empty.  Further,  while adding and updating project participants, added new function for edit button for managing project.

--- a/config.yml
+++ b/config.yml
@@ -29,7 +29,7 @@ adminUserName: admin
 adminPassword: admin
   
 # URL of redmine server
-redmineUrl: http://10.0.1.124/redmine/
+redmineUrl: http://localhost/redmine/
   
 # API access key of redmine administrator
-apiAccessKey: 7ecde4643c4a1196f66717686daa30cbd10d34a7
+apiAccessKey: b9d329ab19430f66e7861fe734e9b334f384dc45
