--- a/config.yml
+++ b/config.yml
@@ -20,7 +20,7 @@ database:
   password: wip
 
   # JDBC URL with newly created database
-  url: jdbc:postgresql://localhost:5432/sep16
+  url: jdbc:postgresql://localhost:5432/nov28
   
 # Tool admin account username (can be changed after login)
 adminUserName: admin
