--- a/config.yml
+++ b/config.yml
@@ -31,4 +31,5 @@ adminPassword: admin
 # URL of redmine server
 redmineUrl: http://localhost/redmine/
   
-
+# IssueID below which synchronization can be ignored
+issueIdCutOff: 35
