--- a/config.yml
+++ b/config.yml
@@ -20,7 +20,7 @@ database:
   password: wip
 
   # JDBC URL with newly created database
-  url: jdbc:postgresql://localhost:5432/march
+  url: jdbc:postgresql://localhost:5432/march2
   
 # Tool admin account username (can be changed after login)
 adminUserName: admin
@@ -33,3 +33,6 @@ redmineUrl: http://localhost/redmine/
   
 # IssueID below which synchronization can be ignored
 issueIdCutOff: 35
+
+# projectId below which synchronization can be ignored
+projectIdCutOff: 150
