--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
             <artifactId>jaxb-impl</artifactId>
             <version>2.3.0</version>
         </dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
     	</dependencies>
 
     <build>
